Revision history for Perl module Alien::SDL

1.407  Wed June 16 2010
     - Confirm archname as 64 before using /usr/lib64 as a ld path [kthakore]

1.406  Sun June 13 2010
     - Added conditional ld path check for 64 bit libraries

1.405  Wed June 2nd 2010 
     - searching more ld paths for libs [kthakore] {ticket #153}
     - removes old share dirs installs of Alien [kthakore]
     - searching for .dylib's, .so's and .bundle's on mac [FROGGS]

1.404  Thu May 13 2010
     - added new binaries for Win64 with fb/pango patch [kmx]

1.403  Sat May 01 2010
     - added Text::Patch to configure_requires [FROGGS]

1.402  Fri Apr 30 2010
     - header tests: stdio.h is only included on windows boxes [#127] [FROGGS]
     - disabling audio support on solaris in case sys/audioio.h is missing [#125] [FROGGS]
     - using Text::Patch instead of patch-command [#125] [FROGGS]
     - added another buildset for BSD's (without TTF/freetype) [#126] [FROGGS]

1.401  Wed Apr 28 2010
     - print chosen build-option when calling ./Build (for cpantesters reports) [FROGGS]
     - Build-script is not created when choosing quit [FROGGS]
     - there should be no cpantester result (NA/UNKNOWN) sent when choosing quit [kmx]

1.4  Tue Apr 27 2010
     - alternative locations/hosts for fetching libs [FROGGS]
     - reenabling option #1 (using already installed libs) [FROGGS]

1.3  Fri Apr 23 2010
     - additional libs can be specyfied via Alien::SDL->config('libs', [-lAdd_Lib]) [FROGGS]
     - checking for required shared libs, disabling options if missing [FROGGS]
	 - png, jpeg and tiff are build always [FROGGS]
     - building zlib-1.2.5 instead of 1.2.4 [FROGGS]
     - making the RECOMMENDED option default [FROGGS]

1.2
     - build_requires fixed (now contains also modules needed for ./Build test)
     - Win32 patch - proper handling of spaces in dirname [FROGGS]
     - Better detection of patch utility (now works with old patch on bsd systems) [kmx]